[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Wave.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 200, 100 )

[node name="Wave" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.6, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 200, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Left" type="Position2D" parent="."]
position = Vector2( 0, -100 )

[node name="LeftMiddle" type="Position2D" parent="."]
position = Vector2( 0, -50 )

[node name="RightMiddle" type="Position2D" parent="."]
position = Vector2( 0, 50 )

[node name="Right" type="Position2D" parent="."]
position = Vector2( 0, 100 )

[connection signal="body_entered" from="." to="." method="_on_Shockwave_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
